<resources>
    <string name="app_name">옥외광고물 전수조사</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="basic_information">기본 정보 (1/2)</string>
    <string name="size_and_location_information">크기 및 위치 정보</string>
    <string name="design_information">디자인 정보</string>
    <string name="install_information">설치 정보</string>
    <string name="construction_information">시공 업소</string>
    <string name="content">내용</string>
    <string name="type">종류</string>
    <string name="pattern">유형</string>
    <string name="attached_place">부착 위치</string>
    <string name="light_type">조명 종류</string>
    <string name="cab">캡</string>
    <string name="count">수량</string>
    <string name="cab_and_count">캡/수량</string>
    <string name="ea">개</string>
    <string name="extent">면적</string>
    <string name="letter_size">문자 크기</string>
    <string name="placed_location">표시 위치</string>
    <string name="placed_side">설치된 면</string>
    <string name="height">높이</string>
    <string name="corner">곡각지</string>
    <string name="side_count">면수</string>
    <string name="meter">m</string>
    <string name="multiply_sign">X</string>
    <string name="divide_sign">/</string>
    <string name="floor_count">층</string>
    <string name="background_color">바탕색</string>
    <string name="letter_color">글자색</string>
    <string name="frame">프레임</string>
    <string name="panel">판넬</string>
    <string name="design">디자인</string>
    <string name="font">글꼴</string>
    <string name="shape">형상</string>
    <string name="representative">대표자</string>
    <string name="phone_number">전화번호</string>
    <string name="ssn">주민 번호</string>
    <string name="mobile">휴대폰</string>
    <string name="shop_name">업소명</string>
    <string name="report_number">신고 번호</string>
    <string name="address">주소</string>
    <string name="post_start">표시 시작</string>
    <string name="post_end">표시 종료</string>
    <string name="construction_start_date">착공일</string>
    <string name="construction_end_date">준공일</string>
    <string name="permission_date">허가일</string>
    <string name="permission_number">허가 번호</string>
    <string name="before_construction">시공 전</string>
    <string name="after_construction">시공 후</string>
    <string name="width">가로</string>
    <string name="length">세로</string>
    <string name="letter_width">문자 가로</string>
    <string name="letter_length">문자 세로</string>
    <string name="size">규격</string>
    <string name="auto_judgement">자동 판정</string>
    <string name="village">리</string>
    <string name="house_number">지번</string>
    <string name="id">ID</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="building_search_method_selection">건물 찾기 선택</string>
    <string name="search_by_address">주소에서 찾기</string>
    <string name="search_by_map">지도에서 찾기</string>
    <string name="province">시/도</string>
    <string name="county">시/구/군</string>
    <string name="town">읍/면/동</string>
    <string name="street">도로</string>
    <string name="building_number">건물 번호</string>
    <string name="search">검색</string>
    <string name="shop_information">업소 정보</string>
    <string name="demolition_pic">철거 사진</string>
    <string name="demolition_date">철거 날짜</string>
    <string name="demolition_information">철거 정보</string>
    <string name="select_time">시간 선택</string>
    <string name="failed_to_initialize">초기화 작업중 오류가 발생 했습니다. 시스템 관리자에게 연락하세요.</string>
    <string name="you_need_to_turn_on_permission_to_use_this_service">본 프로그램을 사용하기 위해서는 해당 권한을 필요로 합니다. 해당 권한을 사용 할 수 있도록 설정해 주세요.</string>
    <string name="cannot_use_map_search_because_internet_not_connected">인터넷에 연결이 되지 않아 지도 검색을 실행 할 수가 없습니다. 네트웍 상태를 확인해 주세요.</string>
    <string name="error_occurred_while_load_user_data">사용자 데이터를 불러오는 중 오류가 발생 했습니다. 시스템 관리자에게 연락하세요.</string>
    <string name="error_occurred_while_initialize">초기화 도중 오류가 발생 했습니다. 시스템 관리자에게 연락하세요.</string>
    <string name="there_are_no_db_file">데이터베이스 파일이 없습니다.</string>
    <string name="there_are_no_initialize_file">초기화 데이터가 없습니다. 동기화 이후 실행해 주세요.</string>
    <string name="loading_data_and_initialize">설정 데이터 및 데이터 베이스 초기화 중..</string>
    <string name="failed_to_load_property">프로퍼티 불러오기 실패.</string>
    <string name="sd_not_mounted">SD 카드가 마운드 되지 않았습니다. SD 카드를 체크해 주세요.</string>
    <string name="failed_to_copy_db_file">데이터베이스 파일 복사를 실패 했습니다. 시스템 관리자에게 연락하세요.</string>
    <string name="loading_user_data">사용자 데이터 불러오는 중...</string>
    <string name="password_not_matched">비밀번호가 일치 하지 않습니다.</string>
    <string name="unknown_error_occured">알 수 없는 오류 발생</string>
    <string name="failed_to_load_user_data">사용자 데이터를 불러오는 중 오류가 발생 했습니다. 시스템 관리자에게 연락하세요.</string>
    <string name="user_not_selected">사용자가 선택 되지 않았습니다.</string>
    <string name="input_password">비밀번호를 입력해 주세요.</string>
    <string name="quit">종료</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="turn_on_permission">권한 설정을 켜 주세요.</string>
    <string name="do_you_want_to_quit">종료 하시겠습니까?</string>
    <string name="saving_changes">변경 사항 저장 중...</string>
    <string name="loading_building_image">건물 사진 불러오는 중...</string>
    <string name="building_name">건물명</string>
    <string name="permit_area">용도 지역</string>
    <string name="no_shop_category_information">업종 정보 없음</string>
    <string name="number_of_case">%d 건</string>
    <string name="status">상태</string>
    <string name="normal">정상</string>
    <string name="shut_down">폐업</string>
    <string name="shop_category">업종</string>
    <string name="floor_count2">층수</string>
    <string name="show_detail_information">상세 정보 보기</string>
    <string name="delete">삭제</string>
    <string name="add_sign">간판 추가</string>
    <string name="modify_shop">업소 정보 변경</string>
    <string name="delete_shop">업소 정보 삭제</string>
    <string name="shop_and_sign_information">업소 및 간판 정보</string>
    <string name="add_shop">업소 정보 추가</string>
    <string name="street_address">도로명 주소</string>
    <string name="house_number_address">지번 주소</string>
    <string name="building_information">건물 정보</string>
    <string name="building_owner">건물주</string>
    <string name="ssn_or_brn">주민등록번호 또는 법인등록번호</string>
    <string name="count_of_sign_and_shop">등록된 업소/간판 수</string>
    <string name="signboard_registration_number">옥외광고물 신고번호</string>
    <string name="tax_invoice_information">세금계산서 발행정보</string>
    <string name="brn">사업자 등록번호</string>
    <string name="business_conditions">업태</string>
    <string name="business_item">종목</string>
    <string name="refresh">새로고침</string>
    <string name="searching_building">건물 검색 중...</string>
    <string name="error_occurred_while_search_building">건물 데이터 검색 중 오류가 발생 했습니다. 시스템 관리자에게 연락하세요.</string>
    <string name="there_are_no_such_buildings">해당하는 건물 데이터가 없습니다.</string>
    <string name="loading_town_list">읍/면/동 데이터 불러오는 중...</string>
    <string name="loading_street_address_list">도로명 주소 데이터 불러오는 중...</string>
    <string name="error_occurred_while_load_address_data">주소 데이터 불러오는 중 오류가 발생했습니다. 시스템 관리자에게 연락하세요.</string>
    <string name="there_are_no_such_buildings_call_to_manager">건물 정보가 없습니다. 시스템 관리자에게 연락하세요.</string>
    <string name="modifying_building_information">건물 정보 변경 중...</string>
    <string name="loading_shop_and_sign_information">업소 및 간판 정보를 불러오는 중...</string>
    <string name="error_occurred_while_load_shop_and_sign">업소및 간판 정보를 불러오는 중 오류가 발생 했습니다. 시스템 관리자에게 문의 하세요.</string>
    <string name="there_are_no_shop_and_sign">업소 및 간판 정보가 없습니다.</string>
    <string name="building_status">업소: %1$d곳, 간판: %2$d건</string>
    <string name="loading_building_picture_list">건물 사진 정보 불러오는 중...</string>
    <string name="applying_changed_data">바뀐 데이터 적용 중...</string>
    <string name="saving">저장 중...</string>
    <string name="succeeded_to_save">저장 완료</string>
    <string name="failed_to_save">저장 실패</string>
    <string name="error_occurred_while_saving_data">데이터 저장 중 에러가 발생 했습니다. 시스템 관리자에게 문의 하세요.</string>
    <string name="deleteing">삭제 중...</string>
    <string name="succeeded_to_delete">삭제 완료</string>
    <string name="failed_to_delete">삭제 실패</string>
    <string name="succeeded_to_modify">변경 완료</string>
    <string name="failed_to_modify">변경 실패</string>
    <string name="shop_deletion">업소 정보 삭제</string>
    <string name="do_you_want_to_delete_shop_data">해당 업소 정보와 간판 정보를 모두 삭제 합니다. 삭제 하겠습니까?</string>
    <string name="no_building_or_shop_information">건물 및 업소 정보가 없어 작업이 취소 됩니다. 시스템 관리자에게 문의 하세요.</string>
    <string name="loading_constructor_data">시공업소 데이터 불러오는 중...</string>
    <string name="error_occurred_while_load_constructor_data">시공업소 데이터 불러오는 중 오류가 발생 했습니다. 시스템 관리자에게 문의 하세요.</string>
    <string name="there_are_no_constructor_data">등록 된 시공업소 데이터 없음.</string>
    <string name="essential_data_not_input">필수 입력 사항이 입력 되지 않았습니다. (%1$s)</string>
    <string name="wrong_number_type_input">잘못 된 숫자 입력: %1$s</string>
    <string name="wrong_number_scope_input">너무 크거나 음수의 값이 입력 되었습니다.</string>
    <string name="loading">불러오는 중...</string>
    <string name="searching">검색 중...</string>
    <string name="loading_shop_information">업소정보를 불러오는 중...</string>
    <string name="there_are_nobuilding_info_for_take_picture">건물 정보가 없어 사진 촬영을 진행 할 수 없습니다.</string>
    <string name="saving_picture">사진 저장 중...</string>
    <string name="noImage">사진 없음</string>
    <string name="show_image">사진 보기</string>
    <string name="loading_sign_information">간판 정보를 불러 오는 중...</string>
    <string name="modify_sign_information">간판 정보 수정</string>
    <string name="display_location_format">%1$d / %2$d 층</string>
    <string name="loading_sign_picture">간판 사진 불러오는 중...</string>
    <string name="distance_colon">거리: </string>
    <string name="multiply_mark">X</string>
    <string name="equal_mark">=</string>
    <string name="calculation">계산</string>
    <string name="apply">적용</string>
    <string name="close">닫기</string>
    <string name="input_distance">거리를 입력해 주세요.</string>
    <string name="wrong_distance_value">잘못 된 거리값 입니다.</string>
    <string name="area_not_selected">영역을 선택해 주세요.</string>
    <string name="select_vertex_correctly">선택한 영역이 올바르지 않습니다.</string>
    <string name="sign_measure_canceled">간판 넓이 측정이 취소 되었습니다.</string>
    <string name="input_sign_content">간판 내용을 입력해 주세요.</string>
    <string name="input_sign_width">간판 가로 규격을 입력해 주세요.</string>
    <string name="input_sign_length">간판 세로 규격을 입력해 주세요.</string>
    <string name="input_placed_floor">간판 설치 층수를 입력해 주세요.</string>
    <string name="input_total_floor">전체 층수를 입력해 주세요.</string>
    <string name="input_shop_name">업소명을 입력해 주세요.</string>
    <string name="failed_to_save_sign_information">간판 정보 저장에 실패 했습니다. 시스템 관리자에게 문의 하세요.</string>
    <string name="add_new_sign">새 간판 추가</string>
    <string name="demolished_signs">철거 간판</string>
    <string name="review_signs">재조사 간판</string>
    <string name="sign_information">간판 정보</string>
    <string name="map_search">지도 검색</string>
    <string name="my_location">내 위치</string>
    <string name="error_occurred_while_search_buildings">건물 정보를 찾는 도중 오류가 발생 했습니다. 시스템 관리자에게 문의하세요.</string>
    <string name="there_are_no_buildings_be_searched">검색된 건물이 없습니다.</string>
    <string name="searching_around_buildings">주변 건물 검색 중...</string>
    <string name="gps_is_off_cannot_use_map_search">위치 찾기 서비스가 꺼져 있습니다. 해당 기능을 켜 주세요.</string>
    <string name="searching_current_address">주소 정보 검색 중...</string>
    <string name="done">완료</string>
    <string name="expert_mode">숙련자 모드</string>
    <string name="beginner_mode">초보자 모드</string>
    <string name="using_beginner_mode">초보자 모드를 사용중 입니다.</string>
    <string name="using_expert_mode">숙련자 모드를 사용중 입니다.</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="develop_information">개발 정보</string>
</resources>