<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/bg_white_box"
        android:padding="5dp">
        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_information"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/dialogLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/shop_name"
                android:textColor="@color/label_text_color"/>
            <EditText
                android:id="@+id/shop_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number"
                android:textColor="@color/label_text_color"/>
            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/representative"
                android:textColor="@color/label_text_color"/>
            <EditText
                android:id="@+id/representative_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="16sp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/status"
                android:textColor="@color/label_text_color"
                android:visibility="gone"/>

            <RadioGroup
                android:id="@+id/status_radio_group"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="gone">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/normal_radio_button"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/normal"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@color/radio_text_color_selector"
                    android:layout_marginRight="5dp"
                    android:checked="true"/>
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/demolition_radio_button"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/shut_down"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@color/radio_text_color_selector"
                    android:layout_marginRight="5dp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/shop_category"
                android:textColor="@color/label_text_color"/>
            <com.mjict.signboardsurvey.widget.SimpleSpinner
                android:id="@+id/shop_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp">
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2.5dp"
                android:layout_toLeftOf="@+id/cancel_button"
                android:text="@string/confirm"
                android:gravity="center"
                android:background="@drawable/btn_basic_button"/>
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2.5dp"
                android:layout_alignParentRight="true"
                android:text="@string/cancel"
                android:gravity="center"
                android:background="@drawable/btn_basic_button"/>
        </RelativeLayout>

    </LinearLayout>






</RelativeLayout>