<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="?attr/colorPrimary" >
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_left_arrow"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:background="@null"/>
        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/back_button"
            android:layout_toLeftOf="@+id/done_button"
            android:text="@string/shop_information"
            android:textSize="22sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/done_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/done"
            android:layout_alignParentRight="true"
            android:gravity="center"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/shop_name"/>
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/phone_number"/>
        <EditText
            android:id="@+id/phone_edit_text"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/shop_category"/>
        <com.mjict.signboardsurvey.widget.SimpleSpinner
            android:id="@+id/category_spinner"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/status"/>
        <com.mjict.signboardsurvey.widget.SimpleSpinner
            android:id="@+id/condition_spinner"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>