<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:padding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/label_text_color"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/shop_name"/>
        <EditText
            android:id="@+id/shop_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="bottom"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/label_text_color"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/phone_number"/>
            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="bottom" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/label_text_color"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/representative"/>
            <EditText
                android:id="@+id/representative_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="bottom" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_category"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <com.mjict.signboardsurvey.widget.SimpleSpinner
                android:id="@+id/shop_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <RadioGroup
                android:id="@+id/status_radio_group"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/normal_radio_button"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/normal"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@color/radio_text_color_selector"
                    android:background="@drawable/bg_radio_button"
                    android:checked="true"
                    android:layout_marginRight="5dp"/>
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/demolish_radio_button"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/shut_down"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@color/radio_text_color_selector"
                    android:background="@drawable/bg_radio_button"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/shop_confirm_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="right"
        android:text="@string/confirm"
        android:background="@drawable/btn_basic_button"
        android:visibility="gone"/>

</LinearLayout>